--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nullvoxpopuli/legacy-prototype-extensions",
+  "name": "",
   "version": "0.0.0",
   "description": "The default blueprint for Embroider v2 addons.",
   "keywords": [
@@ -13,9 +13,6 @@
     "declarations",
     "dist"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
     "build": "rollup --config",
     "format": "prettier . --cache --write",
@@ -26,6 +23,7 @@
     "lint:js": "eslint . --cache",
     "lint:hbs:fix": "ember-template-lint . --fix --no-error-on-unmatched-pattern",
     "lint:js:fix": "eslint . --fix",
+    "lint:types": "glint",
     "start": "vite dev",
     "test": "vite build --mode=development && testem --file testem.cjs ci --port 0",
     "prepack": "rollup --config"
@@ -37,6 +35,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/eslint-parser": "^7.25.1",
+    "@babel/plugin-transform-typescript": "^7.25.2",
     "@babel/runtime": "^7.25.6",
     "@ember/test-helpers": "^5.2.1",
     "@embroider/addon-dev": "^8.0.1",
@@ -46,6 +45,11 @@
     "@embroider/vite": "^1.1.5",
     "@eslint/js": "^9.17.0",
     "@glimmer/component": "^2.0.0",
+    "@glint/core": "^1.4.0",
+    "@glint/environment-ember-loose": "^1.4.0",
+    "@glint/environment-ember-template-imports": "^1.4.0",
+    "@glint/template": "^1.4.0",
+    "@ember/library-tsconfig": "^1.0.0",
     "@rollup/plugin-babel": "^6.0.4",
     "babel-plugin-ember-template-compilation": "^2.2.5",
     "concurrently": "^9.0.1",
@@ -65,6 +69,8 @@
     "qunit-dom": "^3.4.0",
     "rollup": "^4.22.5",
     "testem": "^3.15.1",
+    "typescript-eslint": "^8.19.1",
+    "typescript": "~5.6.0",
     "vite": "^6.2.4"
   },
   "ember": {
@@ -79,9 +85,25 @@
     "#src/*": "./src/*"
   },
   "exports": {
-    ".": "./dist/index.js",
-    "./*": "./dist/*.js",
+    ".": {
+      "types": "./declarations/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./*": {
+      "types": "./declarations/*.d.ts",
+      "default": "./dist/*.js"
+    },
     "./addon-main.js": "./addon-main.cjs"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "declarations/*"
+      ]
+    }
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "packageManager": "pnpm@10.11.1"
 }
